<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="cartelera.um.cartelera.activities.LogInActivity">

    <include layout="@layout/custom_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="@dimen/_2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/email_input"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/accent"
                android:drawablePadding="@dimen/_1"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_input"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableStart="@drawable/ic_lock"
                android:drawableTint="@color/accent"
                android:drawablePadding="@dimen/_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/forget_password"
                android:layout_gravity="left"
                android:text="@string/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_0.50"
                style="@style/ActionLink"
                android:layout_marginLeft="@dimen/_1"
                android:layout_marginStart="@dimen/_1"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/sign_in_link"
            android:textAlignment="center"
            android:text="@string/sign_in_link"
            android:layout_above="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1"
            style="@style/ActionLink"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/log_in_button"
            android:text="@string/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:textColor="@android:color/white"
            android:textSize="@dimen/buttom_size_text"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
</LinearLayout>
